<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RyteBytes</string>

    <!-- Navigation drawer -->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="order">Order</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="eat_ryte">Eat Ryte</string>
    <string name="my_account">My Account</string>
    <string name="heating">Heating</string>
    <string name="do_ryte">Do Ryte</string>

    <!-- Login Fragment -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="credit_card_required">Almost there! Just select the location you\'d like to pick up your meals from and enter your credit card information.</string>
    <string name="select_pickup_location">Select Pickup Location</string>

    <!-- Menu Fragment -->
    <string name="checkout">Checkout</string>
    <string name="menu">Menu</string>

    <!-- MenuItem Fragment -->
    <string name="how_many">How many would you like?</string>
    <string name="calories">Calories: </string>
    <string name="carbs">Carbs: </string>
    <string name="protein">Protein: </string>
    <string name="sodium">Sodium: </string>

    <!-- Checkout Fragment -->
    <string name="place_order">Place Order</string>
    <string name="order_empty_text">It looks like you haven\'t added any food to your cart yet. Add a few now to start enjoying our delicious meals at home!</string>
    <string name="add_items">Add Items</string>
    <string name="checkout_do_ryte_info">A portion of every sale is donated to the food bank partnered with your location!</string>
    <string name="coupon">Coupon</string>
    <string name="apply_coupon">Apply Coupon</string>

    <!-- Heating Fragment -->
    <string name="heating_instructions">Heating Instructions</string>

    <!-- Account Fragment -->
    <string name="account_settings">Account Settings</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_credit_card">Change Credit Card</string>
    <string name="change_pickup_location">Change Pickup Location</string>
    <string name="logout">Logout</string>

    <!-- Pickup locations Fragment -->
    <string name="pickup_locations">Pickup Locations</string>
    <string name="select_new_pickup_location">Select New Pickup Location</string>
    <string name="set_pickup_location">Set Pickup Location</string>

    <!-- Change credit card Fragment -->
    <string name="credit_card">Credit Card</string>

    <!-- Do Ryte Fragment -->
    <string name="do_ryte_logged_out">The information for the food bank associated with your location will be displayed when you sign in to your account.</string>

    <!-- Intro Fragment -->
    <string name="get_started">Get Started</string>
    <string name="intro_description">Welcome to RyteBytes! You\'re just a couple taps away from an all-natural, perfectly balanced meal!\n\n1) Select your pickup location\n2) Pick your food\n3) Place your order, grab your food, and relax. Your meal is served!\n\nIt\’s always as easy as order, pickup, heat.</string>
</resources>
