<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/launch_image" >

    <LinearLayout
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#D7FFFFFF"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical" >

        <com.myrytebytes.widget.CustomFontTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/account_settings"
            android:textSize="24dp"
            />

        <com.myrytebytes.widget.CustomFontButton
            android:id="@+id/btn_reset_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/reset_password"
            />

        <com.myrytebytes.widget.CustomFontButton
            android:id="@+id/btn_change_credit_card"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/change_credit_card"
            />

        <com.myrytebytes.widget.CustomFontButton
            android:id="@+id/btn_change_pickup_location"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/change_pickup_location"
            />

        <com.myrytebytes.widget.CustomFontButton
            android:id="@+id/btn_logout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/logout"
            />
    </LinearLayout>
</RelativeLayout>
