<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background" >

    <com.myrytebytes.widget.CustomFontButton
        android:id="@+id/btn_place_order"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/place_order"
        />

    <com.myrytebytes.widget.CustomFontTextView
        android:id="@+id/tv_do_ryte_donation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_place_order"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:text="@string/checkout_do_ryte_info"
        />

    <com.myrytebytes.widget.CustomFontTextView
        android:id="@+id/tv_pickup_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_do_ryte_donation"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        />

    <com.myrytebytes.widget.CustomFontTextView
        android:id="@+id/tv_order_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_pickup_location"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        />

    <ListView
        android:id="@+id/lv_checkout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tv_order_total"
        />

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.myrytebytes.widget.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/order_empty_text"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            />

        <com.myrytebytes.widget.CustomFontButton
            android:id="@+id/btn_add_items"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_items"
            />
    </LinearLayout>

</RelativeLayout>
