<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_intro"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#D7FFFFFF"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="16dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            />

        <com.myrytebytes.widget.CustomFontTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/intro_description"
            />

        <com.myrytebytes.widget.ButtonSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_new_pickup_location"
            android:gravity="left"
            />

        <com.myrytebytes.widget.CustomFontButton
            android:id="@+id/btn_get_started"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/get_started"
            />

    </LinearLayout>
</RelativeLayout>
