<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <com.myrytebytes.widget.CustomFontTextView
            android:id="@+id/tv_how_many"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/how_many"
            android:textSize="20sp"
            android:gravity="center"
            />

    <LinearLayout
            android:id="@+id/stepper_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_how_many"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal" >

        <com.myrytebytes.widget.CustomFontButton
                android:id="@+id/btn_step_down"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:text="-"
                />

        <com.myrytebytes.widget.CustomFontEditText
                android:id="@+id/et_how_many"
                android:layout_width="60dp"
                android:layout_height="44dp"
                android:gravity="center_horizontal"
                />

        <com.myrytebytes.widget.CustomFontButton
                android:id="@+id/btn_step_up"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:text="+"
                />
    </LinearLayout>

    <com.myrytebytes.widget.MenuItemImageView
            android:id="@+id/img_menu_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stepper_view"
            />

    <com.myrytebytes.widget.CustomFontTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_menu_item"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            />

    <TableLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description"
            android:layout_centerHorizontal="true"
            android:stretchColumns="1,3" >

        <TableRow>
            <com.myrytebytes.widget.CustomFontTextView
                    android:text="@string/calories"
                    android:textSize="18sp"
                    />
            <com.myrytebytes.widget.CustomFontTextView
                    android:id="@+id/tv_calories"
                    android:textSize="18sp"
                    />
            <com.myrytebytes.widget.CustomFontTextView
                    android:text="@string/carbs"
                    android:textSize="18sp"
                    />
            <com.myrytebytes.widget.CustomFontTextView
                    android:id="@+id/tv_carbs"
                    android:textSize="18sp"
                    />
        </TableRow>

        <TableRow>
            <com.myrytebytes.widget.CustomFontTextView
                    android:text="@string/protein"
                    android:textSize="18sp"
                    />
            <com.myrytebytes.widget.CustomFontTextView
                    android:id="@+id/tv_protein"
                    android:textSize="18sp"
                    />
            <com.myrytebytes.widget.CustomFontTextView
                    android:text="@string/sodium"
                    android:textSize="18sp"
                    />
            <com.myrytebytes.widget.CustomFontTextView
                    android:id="@+id/tv_sodium"
                    android:textSize="18sp"
                    />
        </TableRow>
    </TableLayout>

</RelativeLayout>